--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/cashier": "^15.4",
         "laravel/framework": "^11.9",
         "laravel/nova": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "symfony/http-client": "^7.3",
+        "symfony/postmark-mailer": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
